[package]
name = "blinky"
version = "0.1.0"
authors = ["xi xiao <tdxiaoxi2@gmail.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.71"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = "0.48"
esp-idf-sys = { version = "0.34.1", features = ["binstart"] }
esp-idf-hal = "0.43.1"
embedded-svc = "0.27"
anyhow = "1.0.82"

# [patch.crates-io]
# esp-idf-hal = { git = "https://github.com/esp-rs/esp-idf-hal" }

[build-dependencies]
embuild = "0.31.3"
